--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -136,6 +136,7 @@ section:last-of-type p:last-of-type {
   color: #AAAAAA;
 
   .menu-item {
+    cursor: pointer;
     padding-left: 10px;
     height: 44px;
     display: flex;
@@ -158,7 +159,12 @@ section:last-of-type p:last-of-type {
     color: #FFFFFF;
   }
 }
-
+.active-item {
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 19px;
+  color: #FFFFFF;
+}
 .layout {
   display: flex;
 
